Arreglo en resx. y unos Forms

--- a/WindowsFormsApp1/ControlPorcino.csproj
+++ b/WindowsFormsApp1/ControlPorcino.csproj
@@ -90,6 +90,10 @@
     <Reference Include="Microsoft.IdentityModel.Tokens, Version=7.7.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.IdentityModel.Tokens.7.7.1\lib\net472\Microsoft.IdentityModel.Tokens.dll</HintPath>
     </Reference>
+    <Reference Include="picks, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\Downloads\FINAL\bin\Debug\picks.exe</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.5.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Buffers.4.6.1\lib\net462\System.Buffers.dll</HintPath>
@@ -343,6 +347,14 @@
     <None Include="Resources\Pantalla Principal %28Ninasunta%29.png" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\Downloads\Control de enfermedades y vacunacion\ControlDeEnfermedadesYVacunacion.csproj">
+      <Project>{dc7e6d1e-6fb8-42c2-9dbe-62daf0e1a745}</Project>
+      <Name>ControlDeEnfermedadesYVacunacion</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\..\Downloads\proyecto\GASTRONOMIA\GASTRONOMIA\GASTRONOMIA.csproj">
+      <Project>{7d910f80-ac5b-4ab7-bfce-4be536eb0cd2}</Project>
+      <Name>GASTRONOMIA</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Data.SqlClient.SNI.6.0.2\build\net462\Microsoft.Data.SqlClient.SNI.targets" Condition="Exists('..\packages\Microsoft.Data.SqlClient.SNI.6.0.2\build\net462\Microsoft.Data.SqlClient.SNI.targets')" />
